--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -70,3 +70,14 @@
     }
   }
   
+  .password-input-container {
+    display: flex;
+    align-items: center;
+    position: relative;
+  }
+  
+  .password-input-container input {
+    width: 100%;
+    padding-right: 40px; /* Adjust padding to make room for the icon */
+  }
+  
