--- a/src/styles/EmployeeSignUp.css
+++ b/src/styles/EmployeeSignUp.css
@@ -1,16 +1,18 @@
 /* EmployeeForm.css */
 .form-container {
-    background-color: #f1e2c6; /* Sandal background color */
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-top: 50px;
+    background-color: rgb(245, 255, 215); /* Sandal background color */
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    /* margin-top: 40px; */
+    max-width: 100%;
+    width: 100%;
   }
   
   .form-title {
     text-align: center;
     color: #333;
-    font-size: 24px;
+    font-size: 22px;
     font-weight: bold;
     margin-bottom: 20px;
   }
@@ -21,18 +23,19 @@
   
   .employee-form .form-control {
     border-radius: 5px;
-    font-size: 16px;
-    padding: 10px;
+    font-size: 14px;
+    padding: 8px;
   }
   
   .submit-btn {
     width: 100%;
-    padding: 10px;
-    font-size: 18px;
+    padding: 12px;
+    font-size: 16px;
     background-color: #1c2fba;
     border: none;
     border-radius: 5px;
     color: white;
+    margin-top: 10px;
   }
   
   .submit-btn:hover {
@@ -41,10 +44,37 @@
   
   @media (max-width: 768px) {
     .form-container {
-      padding: 20px;
+      padding: 15px;
     }
+  
+    .form-title {
+      font-size: 20px;
+    }
+  
     .submit-btn {
-      font-size: 16px;
+      font-size: 14px;
+    }
+  
+    .form-container .form-control {
+      font-size: 12px;
+    }
+  }
+  
+  @media (max-width: 576px) {
+    .form-container {
+      padding: 10px;
+    }
+  
+    .form-title {
+      font-size: 18px;
+    }
+  
+    .submit-btn {
+      font-size: 12px;
+    }
+  
+    .form-container .form-control {
+      font-size: 12px;
     }
   }
   
