--- a/src/styles/EmployeeSignUp.css
+++ b/src/styles/EmployeeSignUp.css
@@ -1,80 +1,20 @@
-/* EmployeeForm.css */
-.form-container {
-    background-color: rgb(245, 255, 215); /* Sandal background color */
+.employee_signup{
     padding: 10px;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    /* margin-top: 40px; */
-    max-width: 100%;
-    width: 100%;
-  }
-  
-  .form-title {
-    text-align: center;
-    color: #333;
-    font-size: 22px;
-    font-weight: bold;
+    background-color: rgb(245, 255, 215); 
+}
+
+.back-btn {
+    background-color: #313232;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 8px 12px;
+    cursor: pointer;
+    font-size: 1rem;
     margin-bottom: 20px;
   }
   
-  .employee-form .form-group {
-    margin-bottom: 15px;
-  }
-  
-  .employee-form .form-control {
-    border-radius: 5px;
-    font-size: 14px;
-    padding: 8px;
-  }
-  
-  .submit-btn {
-    width: 100%;
-    padding: 12px;
-    font-size: 16px;
-    background-color: #1c2fba;
-    border: none;
-    border-radius: 5px;
-    color: white;
-    margin-top: 10px;
-  }
-  
-  .submit-btn:hover {
-    background-color: #1537b6;
-  }
-  
-  @media (max-width: 768px) {
-    .form-container {
-      padding: 15px;
-    }
-  
-    .form-title {
-      font-size: 20px;
-    }
-  
-    .submit-btn {
-      font-size: 14px;
-    }
-  
-    .form-container .form-control {
-      font-size: 12px;
-    }
-  }
-  
-  @media (max-width: 576px) {
-    .form-container {
-      padding: 10px;
-    }
-  
-    .form-title {
-      font-size: 18px;
-    }
-  
-    .submit-btn {
-      font-size: 12px;
-    }
-  
-    .form-container .form-control {
-      font-size: 12px;
-    }
+  .back-btn:hover {
+    background-color: #0f538b;
   }
   
